# trucking-cost-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
pipeline/: bronze.py  config.py  export.py  gold.py  silver.py  spark_session.py  status.py
pipeline/sources/: eia_diesel.py  wti.py
tests/: conftest.py  test_export.py  test_gold_fuel_shocks.py  test_gold_price_timeline.py  test_gold_wti_diesel_lag.py  test_status.py
